BE: jwt tylko z cookie i poprawa limitów zapytań